--- a/index.html
+++ b/index.html
@@ -205,10 +205,10 @@
         <p>Elegí la forma que prefieras:</p>
         <div class="cta-row" role="group" aria-label="Opciones de contacto">
           <a class="btn" href="https://wa.me/5491172366458" rel="noopener" target="_blank">💬 WhatsApp</a>
-          <a class="btn btn--ghost" href="mailto:tss.it.ventas@gmail.com?subject=Consulta%20desde%20la%20web%20TSS" aria-label="Enviar correo">✉️ Email directo</a>
+          <a class="btn btn--ghost" href="mailto:ventas@tss-tech.it.com?subject=Consulta%20desde%20la%20web%20TSS" aria-label="Enviar correo">✉️ Email directo</a>
           <button class="btn btn--ghost" id="copyMailBtn" type="button" aria-label="Copiar correo">📋 Copiar email</button>
         </div>
-        <p class="mini" style="margin-top:1rem;">Correo: <b id="mailText">tss.it.ventas@gmail.com</b> · WhatsApp: <a href="https://wa.me/5491172366458">11 7236 6458</a></p>
+        <p class="mini" style="margin-top:1rem;">Correo: <b id="mailText">ventas@tss-tech.it.com</b> · WhatsApp: <a href="https://wa.me/5491172366458">11 7236 6458</a></p>
       </div>
     </section>
   </main>
